force-app/main/default/objects/cgcloud__Promotion_Hurdle__c/cgcloud__Promotion_Hurdle__c.object-meta.xml
<CustomObject>
    <description>Restriction that must be satisfied to apply the rewards.</description>
    <label>Promotion Hurdle</label>
    <nameField>
        <displayFormat>PH-{00000}</displayFormat>
        <label>Promotion Hurdle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion Hurdles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>