force-app/main/default/objects/cgcloud__Promotion_Hurdle__c/fields/cgcloud__Date_Value__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Date_Value__c</fullName>
    <description>Value to compare against an output parameter.</description>
    <label>Date Value</label>
    <type>Date</type>
</CustomField>