force-app/main/default/objects/cgcloud__Promotion_Hurdle__c/fields/cgcloud__Numeric_Value__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Numeric_Value__c</fullName>
    <description>Value to compare against an output parameter.</description>
    <label>Numeric Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>