force-app/main/default/objects/cgcloud__Promotion_Hurdle__c/fields/cgcloud__Operation__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Operation__c</fullName>
    <description>Define how hurdles are combined based on the sequence.</description>
    <label>Operation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AND</fullName>
                <default>true</default>
                <label>AND</label>
            </value>
            <value>
                <fullName>OR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>