force-app/main/default/objects/cgcloud__Promotion_Hurdle__c/fields/cgcloud__Operator__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Operator__c</fullName>
    <description>Operator which is applied to the value returned from the user exit underlying the Expression.</description>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>eq</fullName>
            </value>
            <value>
                <fullName>ge</fullName>
            </value>
            <value>
                <fullName>gt</fullName>
            </value>
            <value>
                <fullName>lt</fullName>
            </value>
            <value>
                <fullName>le</fullName>
            </value>
            <value>
                <fullName>ne</fullName>
            </value>
            <value>
                <fullName>PER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>