force-app/main/default/objects/cgcloud__Promotion_Hurdle__c/fields/cgcloud__Promotion_Hurdle_Expression__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion_Hurdle_Expression__c</fullName>
    <description>Master-Detail to the Expression which defines the Hurdle.</description>
    <label>Promotion Expression</label>
    <referenceTo>cgcloud__Promotion_Hurdle_Expression__c</referenceTo>
    <relationshipLabel>Promotion Hurdles</relationshipLabel>
    <relationshipName>Promotion_Hurdles</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>