force-app/main/default/objects/cgcloud__Promotion_Hurdle__c/fields/cgcloud__Promotion_Reward_Group__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion_Reward_Group__c</fullName>
    <description>Master-Detail to the Reward Group for which the hurdle applies to.</description>
    <label>Promotion Reward Group</label>
    <referenceTo>cgcloud__Promotion_Reward_Group__c</referenceTo>
    <relationshipLabel>Hurdles</relationshipLabel>
    <relationshipName>Promotion_Hurdles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>