force-app/main/default/objects/cgcloud__Promotion_Hurdle__c/fields/cgcloud__Sort__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sort__c</fullName>
    <inlineHelpText>Numeric field used to define a sequence for the display of Hurdle in mobility.</inlineHelpText>
    <label>Sort</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>