force-app/main/default/objects/cgcloud__Promotion_Hurdle__c/fields/cgcloud__Sort_Unique__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sort_Unique__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Sort</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>