force-app/main/default/objects/cgcloud__Promotion_Hurdle__c/fields/cgcloud__Title_Language_2__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Title_Language_2__c</fullName>
    <description>Holds the title of language 2.</description>
    <label>Title Language 2</label>
    <length>72</length>
    <type>Text</type>
</CustomField>