force-app/main/default/objects/cgcloud__Promotion_Hurdle__c/fields/cgcloud__Title_Language_4__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Title_Language_4__c</fullName>
    <description>Holds the title of language 4.</description>
    <label>Title Language 4</label>
    <length>72</length>
    <type>Text</type>
</CustomField>