force-app/main/default/objects/cgcloud__Promotion_Hurdle__c/recordTypes/cgcloud__RewardGroupSpecific.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__RewardGroupSpecific</fullName>
    <active>true</active>
    <label>Reward Group-Specific</label>
</RecordType>