force-app/main/default/objects/cgcloud__Promotion_Hurdle__c/recordTypes/cgcloud__RewardSpecific.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__RewardSpecific</fullName>
    <active>true</active>
    <label>Reward-Specific</label>
</RecordType>