force-app/main/default/objects/cgcloud__Promotion_Hurdle__c/validationRules/cgcloud__Check_For_Numeric_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_For_Numeric_Value</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNULL(cgcloud__Numeric_Value__c))  &amp;&amp;   NOT(ISPICKVAL( cgcloud__Promotion_Hurdle_Expression__r.cgcloud__Expression_Result_Type__c , &apos;Numeric&apos;)) &amp;&amp; NOT(ISBLANK(TEXT( cgcloud__Promotion_Hurdle_Expression__r.cgcloud__Expression_Result_Type__c )))</errorConditionFormula>
    <errorMessage>Numeric Value can only be provided if Expression Result Type on Promotion Expression is &apos;Numeric&apos;.</errorMessage>
</ValidationRule>