force-app/main/default/objects/cgcloud__Promotion_Hurdle__c/validationRules/cgcloud__Operator_Cannot_Be_Modified.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Operator_Cannot_Be_Modified</fullName>
    <active>true</active>
    <description>The operator cannot be changed after hurdle creation.</description>
    <errorConditionFormula>AND(NOT(ISNEW()), ISCHANGED(cgcloud__Operator__c))</errorConditionFormula>
    <errorDisplayField>cgcloud__Operator__c</errorDisplayField>
    <errorMessage>The Operator can&apos;t be edited after Hurdle creation.</errorMessage>
</ValidationRule>