force-app/main/default/objects/cgcloud__Promotion_Hurdle__c/validationRules/cgcloud__Sales_Org_Equal_To_Group.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sales_Org_Equal_To_Group</fullName>
    <active>true</active>
    <description>The Promotion Expression and the Promotion Reward Group must have the same Sales Org.</description>
    <errorConditionFormula>TEXT(cgcloud__Promotion_Hurdle_Expression__r.cgcloud__Sales_Org__c) &lt;&gt;  TEXT(cgcloud__Promotion_Reward_Group__r.cgcloud__Sales_Org__c)</errorConditionFormula>
    <errorMessage>The Promotion Expression and the Promotion Reward Group must have the same Sales Org.</errorMessage>
</ValidationRule>